UtahLiveDataTest/src/objects/Campaign__c.object
<CustomObject>
    <description>This object will store Campaign Details .</description>
    <fields>
        <fullName>AddedEmailIds__c</fullName>
        <description>Added user in list in future to send this campaign</description>
        <label>Added Email Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddedGroupIds__c</fullName>
        <description>To show added groups in view mode.</description>
        <label>Added Group Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>This field will include body/ desciption of Campaign which we are going to send in mail</description>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CampaignCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether this campaign sent to all selected users or not.</description>
        <label>CampaignCompleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignNo__c</fullName>
        <description>Assign Auto Number For Campaign Email</description>
        <displayFormat>CP-{0000}</displayFormat>
        <label>CampaignNo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date of campaign</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideDeleteButton__c</fullName>
        <formula>If(ISPICKVAL(Status__c , &apos;Created&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeleteButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <description>To hide button on closed status</description>
        <formula>If(ISPICKVAL(Status__c , &apos;Closed&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To hide button on closed status</inlineHelpText>
        <label>HideEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;CP-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <description>Store record id of related object.</description>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentEmailIds__c</fullName>
        <description>This will be comma separated email ids.</description>
        <label>Sent Email Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>StartDate of Campaign</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Campign Status</description>
        <inlineHelpText>Campign Status</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>This field will include Subject for Campaign</description>
        <label>Subject</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GG:Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StartDatelessThanNow</fullName>
        <active>true</active>
        <description>If StartDate__c is lessthan current Date then system should validate</description>
        <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
        <errorMessage>Campaign Start Date should not be less than Today’s Date</errorMessage>
    </validationRules>
</CustomObject>